--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="0"; url="google.com" />
+    <meta http-equiv="Refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLScpgTKB5wznW7f09eye9viSdKLkB3CTedu5jneQTwX-2fZb0g/viewform?usp=sf_link" />
+    <script type="text/javascript">
+        window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScpgTKB5wznW7f09eye9viSdKLkB3CTedu5jneQTwX-2fZb0g/viewform?usp=sf_link"
+    </script>
   </head>
   <body>
     <h2)Please Wait...</h2>
